- fix page content from overflowing into page footer - fix pagination display, closes #23

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -509,6 +509,7 @@ h2.featured_products
 section.content
   margin: 0 auto 360px auto
   max-width: 1300px
+  overflow: auto
   padding: 0 20px
   padding-top: 90px
   width: 100%
@@ -557,6 +558,7 @@ section.content
     padding-top: 60px
     
     @media screen and (max-width: $break-small)
+      overflow: hidden
       padding-top: 30px
     
     h1
