--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -279,7 +279,7 @@
   font-size: 0
   line-height: 60px
   margin: 0 auto
-  max-width: 600px
+  max-width: 800px
   padding-top: 40px
   text-align: center
   width: 100%
@@ -291,13 +291,15 @@
   span, a
     display: inline-block
     font-size: 20px
-    height: 60px
+    height: 54px
+    line-height: 54px
     text-align: center
-    width: 60px
+    width: 54px
     
     @media screen and (max-width: $break-small)
       font-size: 14px
       height: 40px
+      line-height: 40px
       width: 40px
     
     i
